Try to work around Chrome a content-visibility bug.
We watch for thumbs being near the screen using intersection observers, and
set content-visibility: hidden when they're far off.  In current versions of
Chrome, intersection observers occasionally seem to treat nodes with content-visibility:
hidden as not intersecting, which causes them to ping-pong between being marked visible
and not.  That isn't visible since it's happening offscreen, but causes the page to
chew CPU.

This seems like a Chrome bug, since content-visibility: hidden shouldn't affect intersection
observers.  A node that isn't being rendered still intersects the screen, and this is
needed to control content-visibility manually.

Try switching to content-visibility: hidden.  It seems to do well enough now.

--- a/resources/main.scss
+++ b/resources/main.scss
@@ -1281,6 +1281,7 @@ body.ui-on-hover .top-ui-box + .top-ui-box-padding
     position: relative;
     width: var(--thumb-width);
     height: var(--thumb-height);
+    content-visibility: auto;
     contain-intrinsic-size: var(--thumb-width) var(--thumb-height);
 
     .thumb {
@@ -1296,18 +1297,6 @@ body.ui-on-hover .top-ui-box + .top-ui-box-padding
     /* Hide pending images (they haven't been set up yet). */
     &[data-pending] {
         visibility: hidden;
-    }
-
-    /*
-     * thumbnail-box[data-nearby] is set on thumbs that are close to being onscreen.
-     * If they don't have data-nearby, tell the browser they're not visible.  This
-     * significantly improves performance when we have a lot of thumbs loaded, making
-     * offscreen thumbs essentially free.
-     *
-     * Note that content-intrinsic-size is set programmatically.
-     */
-    &:not([data-nearby]) {
-        content-visibility: hidden;
     }
 
     a.thumbnail-link {
